# gptme-contrib

./: .gitignore  .jscpd.json  .mailmap  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  community_plugins.json  first-plugins.md  mypy.ini  pyproject.toml
plugins/attention-router/: pyproject.toml
plugins/attention-router/src/gptme_attention_router/: __init__.py
plugins/attention-router/src/gptme_attention_router/tools/: __init__.py  attention_router.py
plugins/attention-router/tests/: test_attention_router.py
plugins/cc-analyze/: README.md  pyproject.toml
plugins/cc-analyze/src/gptme_cc_analyze/: __init__.py
plugins/cc-analyze/src/gptme_cc_analyze/tools/: __init__.py  cc_analyze.py
plugins/cc-analyze/tests/: test_cc_analyze.py
plugins/gptme-ace/: pyproject.toml
plugins/gptme-ace/src/gptme_ace/: __init__.py  applier.py  curator.py  embedder.py  generator.py  gptme_integration.py  hybrid_retriever.py  metrics.py  reflector.py  retrieval_analytics.py  reviewer.py  storage.py  visualization.py
plugins/gptme-ace/tests/: test_ace.py  test_applier.py  test_metrics.py  test_reviewer.py  test_visualization.py
plugins/gptme-action-receipts/: README.md  pyproject.toml
plugins/gptme-action-receipts/examples/: scope.yaml
plugins/gptme-action-receipts/src/gptme_action_receipts/: __init__.py
plugins/gptme-action-receipts/src/gptme_action_receipts/hooks/: __init__.py  receipt_hook.py  scope_gate.py
plugins/gptme-action-receipts/tests/: test_receipt_hook.py  test_scope_gate.py
plugins/gptme-attention-tracker/: README.md  pyproject.toml
plugins/gptme-attention-tracker/src/gptme_attention_tracker/: __init__.py
plugins/gptme-attention-tracker/src/gptme_attention_tracker/tools/: __init__.py  attention_history.py  attention_router.py
plugins/gptme-attention-tracker/tests/: test_attention_history.py  test_attention_router.py
plugins/gptme-claude-code/: pyproject.toml
plugins/gptme-claude-code/src/gptme_claude_code/: __init__.py
plugins/gptme-claude-code/src/gptme_claude_code/tools/: claude_code.py
plugins/gptme-claude-code/tests/: test_claude_code.py
plugins/gptme-consortium/: pyproject.toml
plugins/gptme-consortium/src/gptme_consortium/tools/: __init__.py
plugins/gptme-consortium/tests/: test_consortium.py
plugins/gptme-consortium/tests/feature/: __init__.py  test_consortium_features.py  test_features_simple.py
plugins/gptme-consortium/tests/integration/: test_consortium_integration.py
plugins/gptme-gptodo/: pyproject.toml
plugins/gptme-gptodo/src/gptme_gptodo/: __init__.py
plugins/gptme-gptodo/src/gptme_gptodo/tools/: __init__.py  gptodo_tool.py
plugins/gptme-gptodo/tests/: __init__.py  test_tool.py
plugins/gptme-gupp/: README.md  pyproject.toml
plugins/gptme-gupp/src/gptme_gupp/: __init__.py
plugins/gptme-gupp/src/gptme_gupp/tools/: __init__.py  gupp.py
plugins/gptme-gupp/tests/: conftest.py  test_gupp.py
plugins/gptme-headroom-compressor/: pyproject.toml
plugins/gptme-headroom-compressor/src/headroom_compressor/: __init__.py
plugins/gptme-headroom-compressor/tests/: test_headroom_compressor.py
plugins/gptme-imagen/: README.md  pyproject.toml
plugins/gptme-imagen/src/gptme_imagen/: __init__.py  cli.py
plugins/gptme-imagen/tests/: conftest.py  test_cli.py  test_cost_tracker.py  test_execute_block.py  test_image_gen.py  test_image_gen_phase1.py  test_image_gen_phase2.py  test_image_gen_phase3_2.py
plugins/gptme-imagen/tests/feature/: __init__.py  test_features_simple.py  test_image_gen_features.py
plugins/gptme-imagen/tests/integration/: test_image_gen_integration.py
plugins/gptme-lsp/: README.md  pyproject.toml
plugins/gptme-lsp/src/gptme_lsp/: __init__.py  config.py
plugins/gptme-lsp/tests/: __init__.py  test_lsp_tool.py
plugins/gptme-ralph/: README.md  pyproject.toml
plugins/gptme-ralph/src/gptme_ralph/: __init__.py
plugins/gptme-ralph/tests/: test_ralph_loop.py
plugins/gptme-retrieval/: README.md  pyproject.toml
plugins/gptme-retrieval/src/gptme_retrieval/: __init__.py
plugins/gptme-retrieval/src/gptme_retrieval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/gptme-retrieval/tests/: test_retrieval.py
plugins/gptme-tooloutput-trimmer/: pyproject.toml
plugins/gptme-tooloutput-trimmer/src/tooloutput_trimmer/: __init__.py
plugins/gptme-tooloutput-trimmer/tests/: test_summarizer.py  test_tooloutput_trimmer.py
plugins/gptme-tts/: README.md  pyproject.toml  tts_chatterbox.py  tts_kittentts.py  tts_kokoro.py  tts_server.py
plugins/gptme-tts/src/gptme_tts/: __init__.py  tts.py
plugins/gptme-tts/tests/: conftest.py  test_tts.py
plugins/gptme-user-memories/: README.md  pyproject.toml
plugins/gptme-user-memories/src/gptme_user_memories/: __init__.py  extractor.py
plugins/gptme-user-memories/tests/: test_extractor.py
plugins/gptme-warpgrep/: .env.example  Makefile  README.md  pyproject.toml
plugins/gptme-warpgrep/lessons/tools/: warp-grep-usage.md
plugins/gptme-youtube/: README.md  pyproject.toml
plugins/gptme-youtube/src/gptme_youtube/: __init__.py
plugins/gptme-youtube/tests/: test_youtube.py
plugins/gptme_image_gen/: README.md  pyproject.toml
plugins/gptme_image_gen/tests/: conftest.py  test_image_gen.py
plugins/gptme_image_gen/tools/: image_gen.py
plugins/ralph-loop/: README.md  pyproject.toml
plugins/ralph-loop/tests/: test_ralph_loop.py
plugins/wrapped/: README.md  pyproject.toml
plugins/wrapped/src/gptme_wrapped/: __main__.py
plugins/wrapped/tests/: conftest.py  test_wrapped.py
scripts/email/: .gitignore  DESIGN.md  README.md  cli.py  lib.py  migrate_email_format.py  pyproject.toml  watcher.py
scripts/email/communication_utils/auth/: __init__.py  callback_server.py  token_storage.py
scripts/email/communication_utils/config/: base.py  loaders.py  platform_configs.py  validation.py
scripts/email/communication_utils/messaging/: formatting.py
scripts/email/communication_utils/monitoring/: integration_guide.md  loggers.py  metrics.py
scripts/email/communication_utils/state/: tracking.py
(+487 files in other folders)
