[project]
name = "gptme-contrib-workspace"
version = "0.1.0"
description = "Community contributions and utilities for gptme agents"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.uv.workspace]
members = ["packages/*", "plugins/*"]
# Exclude old package paths (now symlinks to new names for backward compatibility)
# packages/lessons -> gptme-lessons-extras
# packages/lib -> gptme-contrib-lib
# packages/run_loops -> gptme-runloops
exclude = ["packages/__pycache__", "plugins/__pycache__", "packages/tasks", "packages/lessons", "packages/lib", "packages/run_loops"]

[tool.uv.sources]
# External dependency
gptme = { git = "https://github.com/gptme/gptme.git", branch = "master" }
# Workspace packages can depend on each other
gptme-contrib-lib = { workspace = true }
gptme-summarization = { workspace = true }

[tool.mypy]
# Exclude packages with hyphenated names from mypy
# These cause "not a valid Python package name" errors due to mypy config parsing
# TODO: investigate mypy hyphen handling (gptme-runloops fixed and type-checked)
exclude = [
    "^packages/gptme-contrib-lib",
    "^packages/gptme-lessons-extras",
]
