[project]
name = "gptme-contrib-workspace"
version = "0.1.0"
description = "Community contributions and utilities for gptme agents"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "flask>=3.0.0",
    "mcp>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
]

[tool.uv.workspace]
members = ["packages/*", "plugins/*"]
exclude = ["packages/__pycache__", "plugins/__pycache__", "packages/tasks"]

[tool.uv.sources]
gptme = { git = "https://github.com/gptme/gptme.git", branch = "master" }
gptme-sessions = { workspace = true }
gptodo = { workspace = true }
gptmail = { workspace = true }

[tool.pytest.ini_options]
# Required for cross-package test collection (pytest packages/)
# Without this, multiple packages with tests/__init__.py cause namespace collisions
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",    # line-too-long: 179 pre-existing violations, fix separately
    "UP006",   # non-pep585-annotation: bulk-fix separately
    "UP035",   # deprecated-import: bulk-fix separately
]

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "frontmatter",        # third-party; no stubs or py.typed marker
]
ignore_missing_imports = true
