[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptme-ace"
version = "0.1.0"
description = "ACE context optimization plugin for gptme - hybrid retrieval, semantic matching, and context curation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "gptme",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "scipy>=1.9.0",
]
full = [
    "anthropic>=0.40.0",
    "plotext>=5.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.entry-points."gptme.plugins"]
gptme_ace = "gptme_ace:plugin"

[tool.setuptools.packages.find]
where = ["src"]
