[project]
name = "gptme-action-receipts"
version = "0.1.0"
description = "Append-only audit ledger for gptme tool actions — emit a hashed receipt before each tool execution"
requires-python = ">=3.10"
dependencies = [
    "gptme>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.entry-points."gptme.plugins"]
action_receipts = "gptme_action_receipts:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gptme_action_receipts"]
