[project]
name = "gptme-gptodo"
version = "0.1.0"
description = "gptodo delegation plugin for gptme - enables coordinator-only agent mode"
requires-python = ">=3.10"
dependencies = ["gptme"]

[project.entry-points."gptme.plugins"]
gptme_gptodo = "gptme_gptodo:tool"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
