[project]
name = "gptme-imagen"
version = "0.1.0"
description = "Multi-provider image generation plugin for gptme"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gptme = [
    "gptme>=0.27.0",
]
cli = [
    "click>=8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
gemini = [
    "google-genai>=1.0.0",
]
dalle = [
    "openai>=1.0.0",
]
all = [
    "gptme-imagen[gptme,cli,gemini,dalle]",
]

[project.scripts]
gptme-imagen = "gptme_imagen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gptme_imagen"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
