[project]
name = "gptme-ralph"
version = "0.1.0"
description = "Ralph plugin for gptme - iterative execution with context reset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."gptme.plugins"]
gptme_ralph = "gptme_ralph:tool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
