[project]
name = "gptme-tooloutput-trimmer"
version = "0.1.0"
description = "Read-time tool-output trimming plugin for gptme"
requires-python = ">=3.10"
dependencies = [
    "gptme>=0.29.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.entry-points."gptme.plugins"]
tooloutput_trimmer = "tooloutput_trimmer:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tooloutput_trimmer"]
