[project]
name = "gptme-tts"
version = "0.1.0"
description = "Text-to-speech plugin for gptme using Kokoro TTS"
requires-python = ">=3.10"
dependencies = [
    "gptme>=0.27.0",
    "requests",
    "scipy",
    "sounddevice>=0.5.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
all = [
    "gptme-tts[test]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gptme_tts"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
