[project]
name = "gptme-warpgrep"
version = "0.1.0"
description = "Warp Grep agentic code search plugin for gptme"
requires-python = ">=3.10"
dependencies = [
    "gptme>=0.27.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gptme_warp_grep"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
