[project]
name = "gptme-ralph-loop"
version = "0.1.0"
description = "Ralph Loop plugin for gptme - iterative execution with context reset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."gptme.plugins"]
gptme_ralph_loop = "gptme_ralph_loop:tool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
